# calculator

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cc
include/: calculator.hpp
src/: calculator.cpp  main.cpp
